--- a/public/index.css
+++ b/public/index.css
@@ -1,12 +1,16 @@
 body {
     margin: 0;
+    font-family: "Noto Sans JP", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 
 ::-webkit-scrollbar {
-    background: gray;
-    width: 5px;
+    opacity: 1;
+    width: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: white;
+    background-color: darkgray;
 }
