--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,9 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
+    ::placeholder{
+        color: lightgray;
+    }
 }
 
 ::-webkit-scrollbar {
